2011-09-11  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-group.el (gnus-group-list-limit): Explain what the command
	does.

	* gnus-sum.el (gnus-fetch-headers): Bump message level.

2011-09-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-msg.el (gnus-summary-mail-forward): Minuscule doc fix.

2011-09-10  Tetsuo Tsukamoto  <tt.tetsuo.tsukamoto@gmail.com>  (tiny change)

	* nnrss.el (nnrss-retrieve-groups): Decode the charset before looking
	up the file (bug#9351).

2011-09-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el: Redo the charset handling.  Let Gnus encode the names, as
	it does with all other backends, but decode the names immediately after
	getting them.

	* gnus-group.el (gnus-group-name-charset): Always return `utf-7' when
	decoding nnimap groups.

	* gnus.el (gnus-variable-list): Don't save `gnus-format-specs' in the
	newsrc file.  It doesn't seem like an important optimisation any more.

2011-09-10  Dave Abrahams  <dave@boostpro.com>  (tiny change)

	* nnimap.el (nnimap-transform-headers): Fix regexp to be less prone to
	overflows.

2011-09-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus.el (gnus-article-mark-lists): Remove `recent'.
	(gnus-interactive-exit): Extend to `quiet'.

	* gnus-sum.el (gnus-offer-save-summaries): Use it.

	* gnus-art.el (gnus-treat-hide-citation-maybe): Add more doc to the
	string.

	* plstore.el (plstore--get-buffer): Silence compiler warnings by
	renaming function arguments from `this'.

	* gnus-sum.el (gnus-newsgroup-recent): Removed.

	* gnus-spec.el (gnus-lrm-string-p): `bidi-string-mark-left-to-right'
	has been renamed.
	(gnus-lrm-string-p): Include RLM and PDF, too.

	* gnus-int.el (gnus-open-server): Make the "denied" message clearer
	(bug#9225).

2011-09-10  Eli Zaretskii  <eliz@gnu.org>

	Add autoload cookies for functions used by sendmail.el.
	* mm-encode.el (mm-default-file-encoding): Add autoload cookie.

	* mml.el (mml-to-mime, mml-attach-file): Add autoload cookies.
