@@ -5,6 +5,14 @@
 
 	* gnus-sum.el (gnus-fetch-headers): Bump message level.
 
+2011-09-11  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* gnus-dup.el (gnus-dup-suppress-articles): Move "Suppressing
+	duplicates" to a higher level.
+
+	* gnus-util.el (gnus-verbose): Lower default to 6 to get rid of the
+	most egregious messages.
+
 2011-09-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* gnus-msg.el (gnus-summary-mail-forward): Minuscule doc fix.
